--- a/CastlevaniaStyle.css
+++ b/CastlevaniaStyle.css
@@ -42,6 +42,9 @@ em strong {
 .serie {
 	background: indigo;
 	padding: 20px;
+	box-sizing: border-box;
+	border: 3px solid white;
+	border-radius: 15px;
 }
 
 ul {
@@ -51,4 +54,22 @@ ul {
 	margin-right: 20%;
 }
 
-.alucard {width: 40%;}
+.base {
+	background-color: black;
+}
+
+.alucard {
+	width: 400px;
+	height: auto;
+}
+
+.simon {
+	width: 100px;
+	height: auto;
+}
+
+footer {
+	text-align: center;
+	background-color: black;
+	padding: 40px 0;
+}
