--- a/CastlevaniaStyle.css
+++ b/CastlevaniaStyle.css
@@ -1,11 +1,12 @@
-Body {background-color: black;}
+Body {background-color: black;
+}
 
 h1 {
 	color: red;
 }
 
 .principal {background-color: black;
-	padding: 20px;
+	padding: 30px;
 
 }
 
@@ -24,6 +25,12 @@ h2 {
 h3 {
 	color: lightblue;
 	font-size: 25px;
+}
+
+h4 {
+	color: red;
+	font-size: 35px;
+	font-style: italic;
 }
 
 p {
@@ -67,6 +74,83 @@ ul {
 	width: 100px;
 	height: auto;
 }
+
+.eu {
+	position: relative;
+	width: 40%;
+	margin: 0 auto;
+}
+
+.eu img {
+	position: relative;
+	padding-bottom: 0px;
+	padding-top: 5px;
+}
+
+.regresse {
+	position: relative;
+	padding-bottom: 50px;
+	padding-top: 20px;
+}
+
+form {
+	margin: 20px 180px;
+}
+
+label, legend {
+	color: red;
+}
+
+form label, form legend {
+	display: block;
+	font-size: 20px;
+	margin: 0 0 15px;
+}
+
+.input-padrao {
+	display: block;
+	margin: 0 0 10px;
+	padding: 10px 25px;
+	width: 50%;
+}
+
+.checkbox {
+	margin: 20px 0;
+}
+
+.enviar {
+	width: 40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+.enviar:hover {
+	background: darkorange;
+	transform: scale(1.2);
+}
+
+table {
+	margin: 20px 0 40px;
+}
+
+thead {
+	background-color: grey;
+	color: white;
+	font-weight: bold;
+}
+
+td, th {
+	border: 1px solid black;
+	padding: 8px 15px;
+}
+
 
 footer {
 	text-align: center;
